--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "firebase/php-jwt": "^6.10"
+    },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
     },
