chore: rename package to nyra namespace
- update composer package name to nyra/sd-jwt with matching PSR-4 mappings\n- migrate all PHP namespaces and use statements to Nyra\SdJwt\ for consistency\n- regenerate autoloader and confirm suite still passes

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": "ghostzero/sd-jwt",
+    "name": "nyra/sd-jwt",
     "description": "Selective Disclosure for JWTs (SD-JWT)",
     "type": "library",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "GhostZero\\SdJwt\\": "src/"
+            "Nyra\\SdJwt\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "GhostZero\\SdJwt\\Tests\\": "tests/"
+            "Nyra\\SdJwt\\Tests\\": "tests/"
         }
     },
     "authors": [
