Fix author name

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "authors": [
         {
-            "name": "RenAc PreuAY",
+            "name": "René Preuß",
             "email": "rene@preuss.io"
         }
     ],
