--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,21 @@
 {
     "name": "nyra/sd-jwt",
-    "description": "Selective Disclosure for JWTs (SD-JWT)",
+    "description": "Selective Disclosure for JWTs (SD-JWT) issuer, holder, and verifier tooling",
+    "keywords": [
+        "jwt",
+        "sd-jwt",
+        "selective-disclosure",
+        "oauth"
+    ],
     "type": "library",
     "license": "MIT",
+    "require": {
+        "php": "^8.1",
+        "firebase/php-jwt": "^6.10"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.5"
+    },
     "autoload": {
         "psr-4": {
             "Nyra\\SdJwt\\": "src/"
@@ -19,14 +32,12 @@
             "email": "rene@preuss.io"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {
-        "firebase/php-jwt": "^6.10"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^10.5"
-    },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "scripts": {
         "test": "@php vendor/bin/phpunit"
+    },
+    "config": {
+        "sort-packages": true
     }
 }
