--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "firebase/php-jwt": "^6.10"
+        "nyra/jwt": "^1.0.0-alpha.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.5"
+        "phpunit/phpunit": "^10.5",
+        "ext-openssl": "*"
     },
     "autoload": {
         "psr-4": {
