--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "nyra/jwt": "^1.0.0-alpha.1"
     },
     "require-dev": {
@@ -36,7 +36,8 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
-        "test": "@php vendor/bin/phpunit"
+        "test": "@php vendor/bin/phpunit",
+        "coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-text"
     },
     "config": {
         "sort-packages": true
