--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,7 +5,7 @@
          cacheDirectory=".phpunit.cache"
          colors="true">
     <testsuites>
-        <testsuite name="GhostZero SdJwt Test Suite">
+        <testsuite name="Nyra SdJwt Test Suite">
             <directory suffix="Test.php">tests</directory>
         </testsuite>
     </testsuites>
